syntax = "proto3";
package client;
option csharp_namespace = "Proto.Client";

import "Proto.Actor/protos.proto";
import "Proto.Remote/protos.proto";



message CreateClientProxyActor {
    actor.PID clientPID = 1;
}

message ClientProxyActorCreated {
    actor.PID clientPID = 1;
    actor.PID proxyPID = 2;
}

message ClientMessageBatch {
    repeated string type_names = 1;
    repeated actor.PID target_pids = 2;
    repeated remote.MessageEnvelope envelopes = 3;
}


service ClientRemoting {
    rpc ConnectClient (stream ClientMessageBatch) returns (stream ClientMessageBatch) {}
}  